# test_task_data_processor

./: CMakeLists.txt  LICENSE  README.md  data_processor.cpp  data_processor.hpp  main.cpp  ring_buffer.hpp  test_task_description.txt  worker_thread.hpp
